Fix whitespace issue in calculator.scss
- Removed the "white-space: nowrap" property from the body element in calculator.scss to fix a whitespace issue.

--- a/src/SCSS/calculator.scss
+++ b/src/SCSS/calculator.scss
@@ -102,7 +102,6 @@ body {
   height: 100%;
   overflow: auto;
   padding: 10px;
-  white-space: nowrap;
   width: 50vh;
 }
 
